@@ -179,8 +179,8 @@ transparent background.
 Note that font rendering is not thread safe, therefore only one
 thread can render text at any given time.
 <br>&nbsp;<br>
-Also, rendering smooth text with underlines will crash SDL_ttf.
-Pygame will currently disable the underline when doing smoothed text.
+Also, rendering smooth text with underlines will crash with SDL_ttf
+less that version 2.0, be careful.
 </ul><br>&nbsp;<br>
 
 <a name=set_bold><font size=+2><b>set_bold
